--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta name="author" content="Ando Yasushi" />
     <script type='text/javascript' src='bower_components/amber/support/requirejs/require.min.js'></script>
     <script type='text/javascript' src='bower_components/amber/support/amber.js'></script>
+    <script type='text/javascript'>
+      document.addEventListener('keypress', function(event) {
+        if (event.keyIdentifier == 'U+0020' && event.ctrlKey) { // Ctrl+SPC
+          require('amber/helpers').popupHelios();
+        }
+      });
+    </script>
   </head>
 
   <body>
@@ -22,11 +29,9 @@
           smalltalk.initialize({
             'transport.defaultAmdNamespace': "Slide"
           });
+          require('amber/helpers').Presentation._tenka1AltJs2014()._start();
       });
     </script>
-    <button onclick="require('amber/helpers').globals.Browser._open()">legacy IDE</button>
-    <button onclick="require('amber/helpers').popupHelios()">Helios IDE</button>
-    <button onclick="require('amber/helpers').Presentation._tenka1AltJs2014()._start();">Start</button>
   </body>
 
 </html>
