--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Amber Slide</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <meta name="author" content="Ando Yasushi" />
+    <link rel="stylesheet" type="text/css" href="slide.css">
     <script type='text/javascript' src='bower_components/amber/support/requirejs/require.min.js'></script>
     <script type='text/javascript' src='bower_components/amber/support/amber.js'></script>
     <script type='text/javascript'>
