--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
   </head>
 
   <body>
+    <div style="position:absolute; bottom:0; right:0; color:white;">
+    <!--
+    <img src="image/tenka1altjs2014/sitanohito.png" width="20" height="20" />
+    「後ろの人などいない」
+    </div>
+    -->
     <script type='text/javascript'>
       require.config({ paths: {
           'Slide': 'src' //mapping compiled .js files and smalltalk source files
